--- a/estilo.css
+++ b/estilo.css
@@ -20,7 +20,7 @@ body{
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
-	font-family:'Montserrat', sans-serif;
+	font-family: "Tahoma", Geneva, sans-serif;
 	
 }
 
